      untrusted sources.  Fixes bug 663.
    - Non-exit relays no longer allow DNS requests.  Fixes bug 619.
      Patch from Lodger.
    - Make controller stream events for DNS requests more consistent,
      by adding "new stream" events for DNS requests, and removing
      spurious "stream closed" events" for cached reverse resolves.
      Patch from mwenge.  Fixes bug 646.

  o Minor features:
    - Allow separate log levels to be configured for different logging
      domains.  For example, this allows one to log all notices, warnings, or
      errors, plus all memory management messages of level debug or higher,
      with: Log [MM] debug-err [*] notice-err file /var/log/tor.
    - Add a malloc_good_size implementation to OpenBSD_malloc_linux.c,
      to avoid unused RAM in buffer chunks and memory pools.
    - Downgrade "sslv3 alert handshake failure" message to INFO.
    - Only log guard node status when guard node status has changed.
    - Add a couple of extra warnings to --enable-gcc-warnings for GCC 4.3,
      and stop using a warning that had become unfixably verbose under GCC
      4.3.
    - Start using OpenSSL's RAND_poll() for better (and more portable)
      cross-platform entropy collection again.  We used to use it, then
      stopped using it because of a bug that could crash systems that called
      RAND_poll when they had a lot of fds open.  It looks like the bug got
      fixed in late 2006.  Our new behavior is to call RAND_poll() at
      startup, and to call RAND_poll() when we reseed later only if we
      have a non-buggy OpenSSL version.
    - Speed up parsing and cut down on memory fragmentation by using
      stack-style allocations for parsing directory objects.  Previously,
      this accounted for over 40% of allocations from within Tor's code
      on a typical directory cache.
    - Lots of new unit tests.
    - New --hush command-line option similar to --quiet.  While --quiet